--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </h1>
   </div>
   <div class="page-header__main-visual">
-    <img src="https://krowl.jp/subjects/coding/sample001/assets/images/main_visual.jpg" alt="メインビジュアル">
+    <img src="https://github.com/y-ondr-528/haikyotanpou01/blob/master/main_visual.jpg?raw=true" alt="メインビジュアル">
   </div>
 </header>
 <!--メインコンテンツ--!>
