--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <div class="work-list">
       <div class="work-list__item photo-work">
-        <p class="photo-work__image"><img src="https://krowl.jp/subjects/coding/sample001/assets/images/hokkaido.jpg" alt="帯広の近くで見つけた廃墟と広大な草原の写真"></p>
+        <p class="photo-work__image"><img src="https://github.com/y-ondr-528/haikyotanpou01/blob/master/hokkaido.jpg?raw=true" alt="帯広の近くで見つけた廃墟と広大な草原の写真"></p>
         <p class="photo-work__text">北海道を旅行するのに最適な季節は8月をおいて他にない<br>
           トウモロコシ畑はいよいよ隆盛を極め、今正にその旬を謳歌しようとしている。<br>
           そんな黄色の恵みを背に帯広から十数キロ北に車を走らせたところ、その場所は見えてきた。<br>
