--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           広大な庭の持ち主と、その隙間から覗く青空が伝える「夏」という言葉の解釈は、きっとまだどの辞書にも載っていないだろう。</p>
       </div>
       <div class="work-list__item photo-work">
-        <p class="photo-work__image"><img src="https://krowl.jp/subjects/coding/sample001/assets/images/printing_factory.jpg" alt="印刷工場跡の中にある階段の写真"</p>
+        <p class="photo-work__image"><img src="https://github.com/y-ondr-528/haikyotanpou01/blob/master/printing_factory.jpg?raw=true" alt="印刷工場跡の中にある階段の写真"</p>
         <p class="photo-work__text">友人の誘いで訪れた印刷工場跡で見た階段はところどころ腐食が進んでおり、歩みを進めるたびにそう長くないであろう踏み板の寿命を感じさせる。<br>
         こういった場所に来る度に懐かしい感覚を覚えてしまうのはなぜだろう。手すりを掴んだ左手から香る酸化鉄は、逆上がりができずに半べそをかいていた時分を思い出せた。</p>
       </div>
