--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         こういった場所に来る度に懐かしい感覚を覚えてしまうのはなぜだろう。手すりを掴んだ左手から香る酸化鉄は、逆上がりができずに半べそをかいていた時分を思い出せた。</p>
       </div>
       <div class="work-list__item photo-work">
-        <p class="photo-work__image"><img src="https://krowl.jp/subjects/coding/sample001/assets/images/hisuitouge.jpg" alt="思ったほど荒れていない翡翠峠の廃線の写真"</p>
+        <p class="photo-work__image"><img src="https://github.com/y-ondr-528/haikyotanpou01/blob/master/hisuitouge.jpg?raw=true" alt="思ったほど荒れていない翡翠峠の廃線の写真"</p>
         <p class="photo-work__text">長めに取った夏季休暇もいよいよ終わりに近づく某日、せっかく軽井沢に来ているのだからと、少し足を伸ばして翡翠峠に訪れた。<br>
         眼前に広がる一本道は、トンネルを抜けて感じた温度差も相まっていっそう胃のあたりをざわつかせる。<br>
         長らく手入れされていないであろう道だが、思った以上に歩みを阻む草が少ない理由に想像を巡らせ、一人笑みが溢れる。<br>
